# ROS-MSCV_2-PROJECT-

./: README.md
NodeMCU/: NodeMCU_Webserver.ino
map_files/: my_mapfirst.pgm  my_mapfirst.yaml
mscv_2_proj/: CMakeLists.txt  package.xml
mscv_2_proj/launch/: Qr_code.launch  ar_launcher.launch  kinect_lidar_navigation.launch  lidar_navigation.launch  qr_tracker_kinect.launch  ver_1_coordinates.launch
mscv_2_proj/rviz/: AR_detection_light.rviz  Demo_video.rviz  Detector_3.rviz
mscv_2_proj/scripts/: Qr_code.py  Qr_code2.py  basic_navigation_node.py  urllib.request_
