<?xml version="1.0"?>
<package format="2">
  <name>mscv_2_proj</name>
  <version>0.0.4</version>
  <description>The mscv_2_proj package, a package which will allow you to perform atonous navigation and marker detection</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mscv@todo.todo">mscv</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mscv_2_proj</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>freenect_camera</build_depend>
  <build_depend>freenect_launch</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libdmtx-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>visp_tracker</build_depend>
  <build_depend>zbar</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>ar_track_alvar</build_export_depend>
  <build_export_depend>ar_track_alvar_msgs</build_export_depend>
  <build_export_depend>freenect_camera</build_export_depend>
  <build_export_depend>freenect_launch</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>image_view</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <!--build_export_depend>libdmtx-dev</build_export_depend-->
  <!--build_export_depend>message_filters</build_export_depend>
  <build_export_depend>resource_retriever</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend-->
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <!--build_export_depend>visp</build_export_depend>
  <build_export_depend>visp_bridge</build_export_depend>
  <build_export_depend>visp_tracker</build_export_depend>
  <build_export_depend>zbar</build_export_depend-->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>
  <exec_depend>freenect_camera</exec_depend>
  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libdmtx-dev</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visp</exec_depend>
  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>visp_tracker</exec_depend>
  <exec_depend>zbar</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>cv_bridge</exec_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
